# voicy-echo-pro

./: .env  README.md  forge.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vite.main.config.mjs  vite.preload.config.mjs  vite.renderer.config.mjs
docs/: ELECTRON_SETUP.md  TAURI_SETUP.md
electron/: main.js  preload.js
electron/icons/: README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  keyboard.rs  main.rs  tray.rs  whisper.rs
src/components/: AudioWaveform.tsx  BottomTabs.tsx  DictationInputSettings.tsx  EditCommands.tsx  GrammarTooltip.tsx  HighlightedTextView.tsx  MicTest.tsx  ModelLoader.tsx  MultiActionButton.tsx  ProtectedRoute.tsx  ReadMode.tsx  ShortcutSettings.tsx  SideMenu.tsx  SpellSuggestionMenu.tsx  VoiceCommandRecorder.tsx  VoiceCommandsGuide.tsx  VoiceEditRecorder.tsx  VoiceRecorder.tsx  WidgetReadMode.tsx  WidgetView.tsx
src/components/ui/: button.tsx  sonner.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useKeyboardShortcuts.ts  useMultiAction.ts  useReadMode.ts  useSwipeGesture.ts  useUndoStack.ts
src/integrations/supabase/: client.ts  types.ts
src/pages/: Edit.tsx  Index.tsx  Info.tsx  Settings.tsx  SignIn.tsx  SignUp.tsx  Splash.tsx
src/services/: voskRecognition.ts  whisperRecognition.ts
src/utils/: grammarCheck.ts  modelConfig.ts  spellCheck.ts  textSegmentation.ts  textToSpeech.ts  voiceCommands.ts  voiceEditCommands.ts
supabase/: config.toml
supabase/functions/check-subscription/: index.ts
supabase/functions/create-checkout/: index.ts
supabase/functions/edit-text/: index.ts
supabase/functions/proxy-model/: index.ts
supabase/functions/transcribe-audio/: index.ts
supabase/migrations/: 20251217123335_c394a709-d6de-4be0-9e13-71816e79571f.sql
