[package]
name = "voice-dictation-widget"
version = "1.0.0"
description = "A desktop voice dictation widget with offline speech recognition"
authors = ["Voice Dictation Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
enigo = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.11", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["sync"] }

# Optional native whisper support
whisper-rs = { version = "0.11", optional = true }
hound = { version = "3.5", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
native-whisper = ["whisper-rs", "hound"]
